# databricks-dbt-playground

./: README.md  Untitled Notebook 2023-06-17 09_01_44.py  pyproject.toml
test_project/: README.md  dbt_project.yml
test_project/models/: bronze_orders.sql  gold_orders_customer.sql  gold_orders_total.sql  quarantine_orders.sql  schema.yml  silver_orders.sql
test_project/seeds/: customer_details.csv
test_project/terraform/: databricks.tf  jobs.tf  sql-dashboards.tf  sql-endpoints.tf  sql-queries.tf  variables.tf
test_project/tests/: schema.yml
